--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server/server.js"
+    "start": "nodemon server/server.js"
   },
   "repository": {
     "type": "git",
@@ -21,7 +21,8 @@
     "body-parser": "^1.14.2",
     "express": "^4.13.3",
     "jsonwebtoken": "^5.5.4",
-    "mongoose": "^4.3.4"
+    "mongoose": "^4.3.4",
+    "nodemon": "^1.8.1"
   },
   "devDependencies": {
     "morgan": "^1.6.1"
